# post-app/apidef/openapi.yaml
@@ -6,7 +6,7 @@ tags:
   - name: post
     description: 投稿情報に関するエンドポイント
 paths:
-  /post/{postId}:
+  /post-app/post/{postId}:
     get:
       summary: 投稿詳細情報の取得
       description: 指定されたIDの投稿詳細情報を取得する
@@ -22,24 +22,24 @@ paths:
           schema:
             type: integer
       responses:
-        '200':
+        "200":
           description: 成功時レスポンス
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GetPostResponse'
-        '400':
+                $ref: "#/components/schemas/GetPostResponse"
+        "400":
           description: 400番台エラーレスポンス
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DomainError'
-        '500':
+                $ref: "#/components/schemas/DomainError"
+        "500":
           description: 500番台エラーレスポンス
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/DomainError'
+                $ref: "#/components/schemas/DomainError"
 
 components:
   schemas:
@@ -82,7 +82,7 @@ components:
         postedAt:
           type: string
           description: 投稿日時
-          example: '2020-01-31T23:59:59+09:00'
+          example: "2020-01-31T23:59:59+09:00"
           format: date-time
 
     GetPostResponse:
@@ -92,7 +92,7 @@ components:
         - post
       properties:
         post:
-          $ref: '#/components/schemas/Post'
+          $ref: "#/components/schemas/Post"
 
     DomainError:
       type: object
